Release history for Dist-Zilla-Plugin-Readme-Brief

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.002002, see misc/*.deps* for details
 - configure: (recommends: ↓1)
 - develop: +1 ↑1 -1 (recommends: ↓1, suggests: ↑1)
 - runtime: +1 (recommends: +1)
 - test: (recommends: ↓2)

 [Internals]
 - Factor out document name extraction logic into PPIx::DocumentName

0.002002 2015-01-10T08:32:27Z c5f7a4f
 [Documentation]
 - Add a SEE ALSO section

0.002001 2015-01-06T05:12:46Z a5cdb4b
 [Documentation]
 - Fix up outdated references/properly reference new attribute.
 - More minor spelling mistakes
 - Tidier whitespace (aristotle++, #2)

 [Generation]
 - Improved README text copywriting (aristotle++, #2)

 [Internals]
 - Improved structuring (aristotle++, #2)

0.002000 2015-01-05T19:51:57Z c592ce7
 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +3

 [Documentation]
 - More spelling/punctuation mistakes. (ether++, #1)

 [Features]
 - Now have `installer` parameter which allows you to force which(plural) installers to document.

0.001001 2015-01-05T09:53:04Z f6de193
 - Spelling mistake (aristotle++)

0.001000 2015-01-05T09:44:06Z 7628164
 - First version.
